--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 
 [dependencies]
 ff = {package="ff_ce" , version="0.11", features = ["derive"]}
+once_cell = "1.17.2"
 rand = "0.4"
 serde_json = "1.0"
 
